src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'='", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "';'", "':'", "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "AND", "OR", "NOT", "EQUAL", 
                      "NOT_EQUAL", "LESS", "LESS_EQUAL", "GREATER", "GREATER_EQUAL", 
                      "CONCAT", "ASSIGN", "LB", "RB", "LSB", "RSB", "LCB", 
                      "RCB", "SEMI", "COLON", "COMMA", "DOT", "ID", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", "WS", "BLOCK_CMT", 
                      "LINE_CMT", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_typ = 2
    RULE_atomic_typ = 3
    RULE_func_typ = 4
    RULE_vardecl = 5
    RULE_fullformat = 6
    RULE_idlist = 7
    RULE_array_typ = 8
    RULE_dimension = 9
    RULE_array_literal = 10
    RULE_exprlist = 11
    RULE_exprlist1 = 12
    RULE_array_index = 13
    RULE_index_expr = 14
    RULE_funcdecl = 15
    RULE_funcpro = 16
    RULE_funcbody = 17
    RULE_paralist = 18
    RULE_paralist1 = 19
    RULE_para = 20
    RULE_funccall = 21
    RULE_literal = 22
    RULE_expr = 23
    RULE_expr1 = 24
    RULE_expr2 = 25
    RULE_expr3 = 26
    RULE_expr4 = 27
    RULE_expr5 = 28
    RULE_expr6 = 29
    RULE_expr7 = 30
    RULE_stmt = 31
    RULE_assign_stmt = 32
    RULE_if_stmt = 33
    RULE_for_stmt = 34
    RULE_while_stmt = 35
    RULE_do_while_stmt = 36
    RULE_break_stmt = 37
    RULE_continue_stmt = 38
    RULE_return_stmt = 39
    RULE_call_stmt = 40
    RULE_block_stmt = 41
    RULE_block_body = 42

    ruleNames =  [ "program", "decl", "typ", "atomic_typ", "func_typ", "vardecl", 
                   "fullformat", "idlist", "array_typ", "dimension", "array_literal", 
                   "exprlist", "exprlist1", "array_index", "index_expr", 
                   "funcdecl", "funcpro", "funcbody", "paralist", "paralist1", 
                   "para", "funccall", "literal", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "stmt", 
                   "assign_stmt", "if_stmt", "for_stmt", "while_stmt", "do_while_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "call_stmt", 
                   "block_stmt", "block_body" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    AND=27
    OR=28
    NOT=29
    EQUAL=30
    NOT_EQUAL=31
    LESS=32
    LESS_EQUAL=33
    GREATER=34
    GREATER_EQUAL=35
    CONCAT=36
    ASSIGN=37
    LB=38
    RB=39
    LSB=40
    RSB=41
    LCB=42
    RCB=43
    SEMI=44
    COLON=45
    COMMA=46
    DOT=47
    ID=48
    INT_LIT=49
    FLOAT_LIT=50
    BOOL_LIT=51
    STRING_LIT=52
    WS=53
    BLOCK_CMT=54
    LINE_CMT=55
    ILLEGAL_ESCAPE=56
    UNCLOSE_STRING=57
    ERROR_CHAR=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.decl()
            self.state = 87
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 89
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 90
                    self.funcdecl()
                    pass


                self.state = 93
                self.decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 95
                    self.vardecl()
                    pass

                elif la_ == 2:
                    self.state = 96
                    self.funcdecl()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_typ(self):
            return self.getTypedRuleContext(MT22Parser.Array_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = MT22Parser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typ)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 6)
                self.state = 106
                self.array_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomic_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomic_typ" ):
                return visitor.visitAtomic_typ(self)
            else:
                return visitor.visitChildren(self)




    def atomic_typ(self):

        localctx = MT22Parser.Atomic_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atomic_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def array_typ(self):
            return self.getTypedRuleContext(MT22Parser.Array_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_typ" ):
                return visitor.visitFunc_typ(self)
            else:
                return visitor.visitChildren(self)




    def func_typ(self):

        localctx = MT22Parser.Func_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_typ)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.array_typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def fullformat(self):
            return self.getTypedRuleContext(MT22Parser.FullformatContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.idlist()
                self.state = 121
                self.match(MT22Parser.COLON)
                self.state = 122
                self.typ()
                self.state = 123
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.fullformat()
                self.state = 126
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullformatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def fullformat(self):
            return self.getTypedRuleContext(MT22Parser.FullformatContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(MT22Parser.TypContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fullformat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullformat" ):
                return visitor.visitFullformat(self)
            else:
                return visitor.visitChildren(self)




    def fullformat(self):

        localctx = MT22Parser.FullformatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_fullformat)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(MT22Parser.ID)
                self.state = 131
                self.match(MT22Parser.COMMA)
                self.state = 132
                self.fullformat()
                self.state = 133
                self.match(MT22Parser.COMMA)
                self.state = 134
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(MT22Parser.ID)
                self.state = 137
                self.match(MT22Parser.COLON)
                self.state = 138
                self.typ()
                self.state = 139
                self.match(MT22Parser.ASSIGN)
                self.state = 140
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idlist)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.match(MT22Parser.ID)
                self.state = 145
                self.match(MT22Parser.COMMA)
                self.state = 146
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomic_typ(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_typ" ):
                return visitor.visitArray_typ(self)
            else:
                return visitor.visitChildren(self)




    def array_typ(self):

        localctx = MT22Parser.Array_typContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_typ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(MT22Parser.ARRAY)
            self.state = 151
            self.match(MT22Parser.LSB)
            self.state = 152
            self.dimension()
            self.state = 153
            self.match(MT22Parser.RSB)
            self.state = 154
            self.match(MT22Parser.OF)
            self.state = 155
            self.atomic_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(MT22Parser.INT_LIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimension(self):
            return self.getTypedRuleContext(MT22Parser.DimensionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimension

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimension" ):
                return visitor.visitDimension(self)
            else:
                return visitor.visitChildren(self)




    def dimension(self):

        localctx = MT22Parser.DimensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimension)
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MT22Parser.INT_LIT)
                self.state = 158
                self.match(MT22Parser.COMMA)
                self.state = 159
                self.dimension()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(MT22Parser.INT_LIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_literal" ):
                return visitor.visitArray_literal(self)
            else:
                return visitor.visitChildren(self)




    def array_literal(self):

        localctx = MT22Parser.Array_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(MT22Parser.LCB)
            self.state = 164
            self.exprlist()
            self.state = 165
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprlist1(self):
            return self.getTypedRuleContext(MT22Parser.Exprlist1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist" ):
                return visitor.visitExprlist(self)
            else:
                return visitor.visitChildren(self)




    def exprlist(self):

        localctx = MT22Parser.ExprlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exprlist)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.FALSE, MT22Parser.TRUE, MT22Parser.SUB, MT22Parser.NOT, MT22Parser.LB, MT22Parser.LCB, MT22Parser.ID, MT22Parser.INT_LIT, MT22Parser.FLOAT_LIT, MT22Parser.STRING_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.exprlist1()
                pass
            elif token in [MT22Parser.RB, MT22Parser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exprlist1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def exprlist1(self):
            return self.getTypedRuleContext(MT22Parser.Exprlist1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_exprlist1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprlist1" ):
                return visitor.visitExprlist1(self)
            else:
                return visitor.visitChildren(self)




    def exprlist1(self):
